--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,13 +42,16 @@ services:
       SPRING_DATASOURCE_USERNAME: demuser
       SPRING_DATASOURCE_PASSWORD: dempass
       MDM_API_URL: http://mdm:8080
+      # JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
     ports:
       - "8082:8080"
+      - "5005:5005"  # <--- expose debug port
     depends_on:
       - dem-db
       - mdm
     networks:
       - mdmnet
+
 
 networks:
   mdmnet:
